--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -4,39 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Spot</title>
+    <title>TYP-O: India's first uncensored platform to write whatever there is in yor mind</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
+
 </head>
 
 <body>
+    <h1 class="mb-4" id="page-title">Type-O</h1>
     <div class="container">
-        <h1 class="mb-4" id="title">Blog Spot</h1>
+
         <a href="/articles/new" class="btn btn-success">New Article</a>
         <% articles.forEach(article =>{ %>
         <div class="card mt-4">
             <div class="card-body">
                 <div class="card-title">
-                    <%= article.title %>
+                    <h4><%= article.title %></h4>
                 </div>
-                <div class="card-subtitle text-muted mb-2">
+                <div class="card-subtitle mb-2">
                     <%= article.created.toLocaleDateString() %>
                 </div>
                 <div class="card-text mb-2">
                     <%= article.description %>
                 </div>
-                <a href="/articles/<%= article.slug %>" class="btn btn-primary">Read More</a>
-                <form action="/articles/<%= article.id %>?_method=DELETE" method="POST" class="d-inline">
+                <div id="crud"><a href="/articles/<%= article.slug %>" class="btn btn-primary mr-3 ml-3 mt-4">Read
+                        More</a>
+                    <form action="/articles/<%= article.id %>?_method=DELETE" method="POST" class="d-inline">
 
-                    <button class="btn btn-danger" type="submit">Delete </button>
-                </form>
-                <a href="articles/edit/<%= article.id %>" class="btn btn-primary"> Edit</a>
+                        <button class="btn btn-danger mr-3 ml-3 mt-4" type="submit">Delete </button>
+                    </form>
+                    <a href="articles/edit/<%= article.id %>" class="btn btn-primary mr-3 ml-3 mt-4"> Edit</a>
+                </div>
             </div>
         </div>
         <%}) %>
     </div>
-    <!-- 
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -45,7 +52,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script> -->
+        crossorigin="anonymous"></script>
 </body>
 
 
