--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -4,24 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Spot</title>
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"> -->
+    <title>TYP-O: India's first uncensored platform to write whatever there is in yor mind</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
+
 </head>
 
 <body>
-    <div class="container">
-        <h1 class="mb-1"><%= article.title %></h1>
-        <div class="text-muted mb-2"><%= article.created.toLocaleDateString() %></div>
-        <a href="/" class="btn btn-secondary"> All Articles</a>
-        <a href="/articles/edit/<%= article.id%>" class="btn btn-primary">Edit</a>
-        <div>
+    <div class="container" style="overflow-y:hidden;">
+        <h1 class="mb-1" id="page-title"><%= article.title %></h1>
+        <div class="mb-2 card-subtitle"><%= article.created.toLocaleDateString() %></div>
+        <a href="/" class="btn btn-secondary mr-3 ml-3 mt-4 mb-5"> All Articles</a>
+        <a href="/articles/edit/<%= article.id%>" class="btn btn-primary mr-3 ml-3 mt-4 mb-5">Edit</a>
+        <div class="card mt-10" style="overflow-y: auto;">
             <%- article.sanitizedHtml %>
 
         </div>
     </div>
 
-    <!-- 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -30,8 +34,5 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script> -->
+        crossorigin="anonymous"></script>
 </body>
-
-
-</html>
