--- a/views/articles/edit.ejs
+++ b/views/articles/edit.ejs
@@ -10,19 +10,19 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../../public/css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
 
 </head>
 
 <body>
+    <h1 class="mb-4" id="page-title">Edit Article</h1>
     <div class="container">
-        <h1 class="mb-4">Edit Article</h1>
+
         <form action="/articles/<%= article.id %>?_method=PUT" method="POST">
             <%- include("_formFields") %>
         </form>
 
     </div>
-
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
