--- a/views/articles/new.ejs
+++ b/views/articles/new.ejs
@@ -10,13 +10,29 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
 
 </head>
 
 <body>
-    <h1 class="mb-4" id="page-title">New Article</h1>
+    <nav id="navbar" style="justify-content: space-between;">
+        <div id="logo">
+            <img src="../../assets/logo.png" alt="">
+        </div>
+
+        <ul id="options">
+            <li id="choice"><a href="/articles">All Articles</a></li>
+            <li id="choice"><a href="/articles/myArticles">My Articles</a></li>
+            <li id="choice"><a href="/articles/new">New Article</a></li>
+
+
+        </ul>
+        <a href="/users/logout" class="btn btn-secondary" id="logout">Logout</a>
+
+    </nav>
     <div class="container" style="overflow-y: auto;">
+        <h1 class="mb-4" id="page-title">New Article</h1>
+
 
         <form action="/articles" method="POST">
             <%- include("_formFields") %>
