--- a/views/articles/_formFields.ejs
+++ b/views/articles/_formFields.ejs
@@ -13,5 +13,5 @@
     <textarea name="markdown" id="markdown" class="form-control" required><%= article.markdown %></textarea>
 
 </div>
-<a href="/" class="btn btn-secondary mr-3 ml-3 mt-4">Cancel</a>
+<a href="/articles/" class="btn btn-secondary mr-3 ml-3 mt-4">Cancel</a>
 <button type="submit" class=" btn btn-primary mr-3 ml-3 mt-4"> Save</button>
