--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -10,15 +10,33 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
 <body>
-    <h1 class="mb-4" id="page-title">Type-O</h1>
-    <div class="container">
+    <nav id="navbar" style="justify-content: space-between;">
+        <div id="logo">
+            <img src="../../assets/logo.png" alt="">
+        </div>
 
-        <a href="/articles/new" class="btn btn-success">New Article</a>
+        <ul id="options">
+            <li id="choice"><a href="/articles">All Articles</a></li>
+            <li id="choice"><a href="/articles/myArticles">My Articles</a></li>
+            <li id="choice"><a href="/articles/new">New Article</a></li>
+
+
+        </ul>
+        <a href="/users/logout" class="btn btn-secondary" id="logout">Logout</a>
+
+    </nav>
+    <div class="container" style="overflow-y: auto;">
+        <div class="head">
+            <h1 class="mb-1" id="page-title">Type-0</h1>
+
+        </div>
+
+        <a href="/articles/new/" class="btn btn-success">New Article</a>
         <% articles.forEach(article =>{ %>
         <div class="card mt-4">
             <div class="card-body">
@@ -28,16 +46,15 @@
                 <div class="card-subtitle mb-2">
                     <%= article.created.toLocaleDateString() %>
                 </div>
+                <div class="card-subtitle mb-2">
+                    -by <%= article.author %>
+                </div>
                 <div class="card-text mb-2">
                     <%= article.description %>
                 </div>
                 <div id="crud"><a href="/articles/<%= article.slug %>" class="btn btn-primary mr-3 ml-3 mt-4">Read
                         More</a>
-                    <form action="/articles/<%= article.id %>?_method=DELETE" method="POST" class="d-inline">
 
-                        <button class="btn btn-danger mr-3 ml-3 mt-4" type="submit">Delete </button>
-                    </form>
-                    <a href="articles/edit/<%= article.id %>" class="btn btn-primary mr-3 ml-3 mt-4"> Edit</a>
                 </div>
             </div>
         </div>
