--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -11,7 +11,9 @@
         href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="../js/main.js"></script>
 </head>
 
 <body>
@@ -30,19 +32,85 @@
         <a href="/users/logout" class="btn btn-secondary" id="logout">Logout</a>
 
     </nav>
-    <div class="container" style="overflow-y:hidden;">
+    <div class="container" style="overflow-y:scroll; display: flex;flex-direction: column; justify-content: start;">
         <div class="head">
             <h1 class="mb-1" id="page-title"><%= article.title %></h1>
 
         </div>
         <div class="mb-2 card-subtitle"><%= article.created.toLocaleDateString() %></div>
-        <a href="/articles/" class="btn btn-secondary mr-3 ml-3 mt-4 mb-5"> All Articles</a>
-        <a href="/articles/edit/<%= article.id%>" class="btn btn-primary mr-3 ml-3 mt-4 mb-5">Edit</a>
-        <div class="card mt-10" style="overflow-y: auto;">
+        <div id="like-unlike" style="justify-content: start;">
+
+            <div class="like-unlike">
+
+                <button width="20.0" height=20.0 class="mr-3 ml-3 mt-4 mb-5" id="upvote-button">
+                    <img width="20.0" height="20.0" src="../../assets/upvote.jpeg" alt="">
+                    <%= article.upvotes %>
+                </button>
+            </div>
+            <div class="like-unlike">
+
+                <button width="20.0" height=20.0 class="mr-3 ml-3 mt-4 mb-5" id="downvote-button">
+                    <img src="../../assets/downvote.png" alt="" width="20.0" height="20.0">
+                    <%= article.downvotes %>
+                </button>
+            </div>
+            <div class="like-unlike">
+
+                <button width="20.0" height=20.0 class="mr-3 ml-3 mt-4 mb-5" id="comment-button">
+                    <img src="../../assets/comments.jpeg" alt="" width="20.0" height="20.0">
+                    <%= article.comments.length %>
+                </button>
+
+            </div>
+            <a href="/articles/" class="btn btn-secondary mr-3 ml-3 mt-4 mb-5"> All Articles</a>
+            <a href="/articles/edit/<%= article.id%>" class="btn btn-primary mr-3 ml-3 mt-4 mb-5">Edit</a>
+        </div>
+
+        <div class="card mt-10 mb-10" style="margin: 20px 0px;">
             <%- article.sanitizedHtml %>
 
         </div>
+        <div class="mt-20">
+            <div class="mt-24 mr-4 ml-4" id="comment-box" style="overflow-y: auto;">
+                <form action="/articles/<%= article.id %>" method="POST">
+                    <div class="form-group " style="display:flex;flex-direction: row;">
+
+                        <input type="text" name="comment" id="comment" class="form-control mb-10 mt-10"
+                            placeholder="Write a comment">
+                        <button type="submit" id="add-comment" class="btn btn-primary"
+                            onclick="addComment(event)">Send</button>
+                    </div>
+                </form>
+                <div class="card-title">
+                    <h4>Comments</h4>
+                </div>
+
+                <% article.comments.forEach(comment=>{ %>
+                <div class="card" class="each-comment"
+                    style="display: flex; flex-direction: row; justify-content: start ;height: auto;">
+
+
+                    <div class="profile pr-0">
+                        <img src="../../assets/profile.png" class="mt-2" width="20%" height="40px" alt="...">
+                        <%= comment.name %>
+                    </div>
+
+                    <div class="card-body">
+                        <p class="card-text" style="text-align: start; font-size: 1.2em;">
+                            <%=comment.comment %>
+                        </p>
+                    </div>
+                </div>
+
+                <% }) %>
+
+            </div>
+        </div>
+
+
     </div>
+
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
