fully functioning website

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -7,6 +7,7 @@
     font-family: 'Roboto Mono', monospace;
     font-weight: 500;
 }
+
 @media (max-width:580px)
 {
      #page-title
@@ -38,12 +39,14 @@ body::before{
 .container{
     overflow-y: scroll;
     height: 83vh;
+    cursor: pointer;
+    
+
 }
 .card{
     background-color: #ffffff45;
-    height:auto;
-    
-    width:100%;
+    height:250px;
+    width:1100px;
 
 }
 .card:hover {
@@ -51,7 +54,7 @@ body::before{
     box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.979);
     transition: 0.1s;
     border: none;
-    height:300px;
+    height:250px;
     width:1100px;
 
 }
@@ -62,27 +65,6 @@ h4,label{
     font-family: 'Roboto Mono', monospace;
     font-size: 2.2em;
     
-}
-@media (max-width:870px)
-{
-    h4,label{
-        text-align: center;
-    color: white;
-    text-shadow: 3px 3px 0.5px black;
-    font-family: 'Roboto Mono', monospace;
-    font-size: 1.8em;
-    }
-}
-@media (max-width:580px)
-{
-    h4,label{
-        font: size 1.2em ;
-    text-shadow: 1px 1px 0.3px black;
-     font-family: 'Roboto Mono', monospace;
-    font-size: 1.0em;
-    text-align: center;
-    color: white;
-    }
 }
 .card-subtitle
 {
@@ -107,7 +89,7 @@ h4,label{
     font-style: italic;
 }
 input,textarea{
-background-color: blanchedalmond;
+background-color: rgba(255, 235, 205, 0.596);
 outline: none;
 font-family: 'Roboto Mono', monospace;
 font-style: italic;
@@ -188,53 +170,13 @@ border: none;
 }
 #navbar ul li a:hover
 {
-    background-color: bisque;
+    background-color: greenyellow;
     color: black;
     font-weight: 400;
+    cursor:pointer;
 }
 #logout{
     margin-right:4px;
     width: 6vw;
     
-}
-#like-unlike{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: start;
-    width: auto;
-}
-#like-unlike button
-{
-    border: none;
-    outline: none;
-}
-.like-unlike
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-.comment-box{
-    display: none;
-}
-.each-comment{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: start;
-    box-shadow: 3px 3px 1px black;
-}
-.profile
-{
-    display: flex;
-     flex-direction: column;
-      justify-content: space-between;
-    width: 20vw;
-    padding: 0px;
-    font-family:'Roboto Mono', monospace;
-    color: black;
-    font-weight: bold;
-    font-style: italic;
-    margin-right: 0px;
 }
