--- a/views/articles/edit.ejs
+++ b/views/articles/edit.ejs
@@ -10,32 +10,56 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../../css/style.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="../../js/main.js"></script>
-
+    <link rel="stylesheet" href="../../css/nav2.css">
+    <link rel="stylesheet" href="../../css/nav.css">
+    <link rel="stylesheet" href="../../css/home.css">
 </head>
 
+<script type="text/javascript">
+
+    function openNav() {
+        document.getElementById("myNav").style.display = "block";
+    }
+
+    function closeNav() {
+        document.getElementById("myNav").style.display = "none";
+    }
+
+</script>
+
 <body>
-    <nav id="navbar" style="justify-content: space-between;">
-        <div id="logo">
-            <img src="../../assets/logo.png" alt="">
+    <span class="menu-icon" onclick="openNav()">&#9776;</span>
+    <div class="menu-container" id="myNav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="menu-content" style="  position: relative;
+    top:25%;
+    width:100%;
+    text-align:center;
+    margin-top:30px;">
+
+            <a href="/articles">All Articles</a>
+            <a href="/articles/myArticles">My Articles</a>
+            <a href="/articles/new">New Article</a>
+            <a href="/users/logout">Logout</a>
         </div>
-
-        <ul id="options">
-            <li id="choice"><a href="/articles">All Articles</a></li>
-            <li id="choice"><a href="/articles/myArticles">My Articles</a></li>
-            <li id="choice"><a href="/articles/new">New Article</a></li>
+    </div>
 
 
-        </ul>
-        <a href="/users/logout" class="btn btn-secondary" id="logout">Logout</a>
 
-    </nav>
 
-    <div class="container">
+
+    <div id="topframe">
         <h1 class="mb-4" id="page-title">Edit Article</h1>
+    </div>
+
+    <br /><br /><br />
+
+    <div class="container" style="overflow-y: auto;">
+
 
         <form action="/articles/<%= article.id %>?_method=PUT" method="POST">
             <%- include("_formFields") %>
@@ -51,6 +75,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
+
 </body>
 
 
