--- a/public/css/new.css
+++ b/public/css/new.css
@@ -27,7 +27,7 @@
 body::before{
     content: "";
     position: absolute;
-    height: 900px;
+    height: 100vh;
     width: 100vw;
     top: 0px;
     left: 0px;
@@ -42,7 +42,6 @@ body::before{
 .card{
     background-color: #ffffff45;
     height:auto;
-    
     width:100%;
 
 }
@@ -51,8 +50,8 @@ body::before{
     box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.979);
     transition: 0.1s;
     border: none;
-    height:300px;
-    width:1100px;
+    height:auto;
+    width:100%;
 
 }
 h4,label{
