--- a/public/css/town.css
+++ b/public/css/town.css
@@ -27,7 +27,7 @@
 body::before{
     content: "";
     position: absolute;
-    height: 900px;
+    height: 800px;
     width: 100vw;
     top: 0px;
     left: 0px;
@@ -35,15 +35,18 @@ body::before{
     opacity: 0.8;
     z-index: -1;
 }
+
 .container{
     overflow-y: scroll;
     height: 83vh;
+    cursor: pointer;
+    
+
 }
 .card{
     background-color: #ffffff45;
-    height:auto;
-    
-    width:100%;
+    height:400px;
+    width:1100px;
 
 }
 .card:hover {
@@ -51,7 +54,7 @@ body::before{
     box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.979);
     transition: 0.1s;
     border: none;
-    height:300px;
+    height:400px;
     width:1100px;
 
 }
@@ -107,7 +110,7 @@ h4,label{
     font-style: italic;
 }
 input,textarea{
-background-color: blanchedalmond;
+background-color: rgba(255, 235, 205, 0.596);
 outline: none;
 font-family: 'Roboto Mono', monospace;
 font-style: italic;
@@ -188,53 +191,13 @@ border: none;
 }
 #navbar ul li a:hover
 {
-    background-color: bisque;
+    background-color: greenyellow;
     color: black;
     font-weight: 400;
+    cursor:pointer;
 }
 #logout{
     margin-right:4px;
     width: 6vw;
     
-}
-#like-unlike{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: start;
-    width: auto;
-}
-#like-unlike button
-{
-    border: none;
-    outline: none;
-}
-.like-unlike
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-.comment-box{
-    display: none;
-}
-.each-comment{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: start;
-    box-shadow: 3px 3px 1px black;
-}
-.profile
-{
-    display: flex;
-     flex-direction: column;
-      justify-content: space-between;
-    width: 20vw;
-    padding: 0px;
-    font-family:'Roboto Mono', monospace;
-    color: black;
-    font-weight: bold;
-    font-style: italic;
-    margin-right: 0px;
 }
