--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -10,31 +10,49 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script defer src="../js/main.js"></script>
+    <link rel="stylesheet" href="../../css/nav2.css">
+    <link rel="stylesheet" href="../../css/nav.css">
+    <link rel="stylesheet" href="../../css/new.css">
 </head>
+<script type="text/javascript">
+
+    function openNav() {
+        document.getElementById("myNav").style.display = "block";
+    }
+
+    function closeNav() {
+        document.getElementById("myNav").style.display = "none";
+    }
+
+</script>
 
 <body>
-    <nav id="navbar" style="justify-content: space-between;">
-        <div id="logo">
-            <img src="../../assets/logo.png" alt="">
+    <span class="menu-icon" onclick="openNav()">&#9776;</span>
+    <div class="menu-container" id="myNav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="menu-content" style="  position: relative;
+    top:25%;
+    width:100%;
+    text-align:center;
+    margin-top:30px;">
+
+            <a href="/articles">All Articles</a>
+            <a href="/articles/myArticles">My Articles</a>
+            <a href="/articles/new">New Article</a>
+            <a href="/users/logout">Logout</a>
         </div>
-
-        <ul id="options">
-            <li id="choice"><a href="/articles">All Articles</a></li>
-            <li id="choice"><a href="/articles/myArticles">My Articles</a></li>
-            <li id="choice"><a href="/articles/new">New Article</a></li>
-
-
-        </ul>
-        <a href="/users/logout" class="btn btn-secondary" id="logout">Logout</a>
-
-    </nav>
+    </div>
+    <div id="topframe">
+        <h1 class="mb-1" id="page-title">Type-0</h1>
+    </div>
+    <br /><br /><br />
     <div class="container" style="overflow-y: auto;">
         <div class="head">
-            <h1 class="mb-1" id="page-title">Type-0</h1>
+
 
         </div>
 
@@ -59,52 +77,53 @@
 
                 <div id="crud">
 
-                    <div id="like-unlike">
+                    <div id="like-unlike" style="flex-wrap: wrap;">
 
                         <div class="like-unlike">
 
-                            <button width="20.0" height=20.0 class="ml-3 mr-3 mt-4" id="upvote-button"
-                                data-id="<%= article.title %>">
-                                <img width="20.0" height="20.0" src="../../assets/upvote.jpeg" alt="">
+                            <i class="fa fa-thumbs-up upvote-button" data-id="<%= article.title %>"
+                                style="margin:5px 5px">
+
                                 <%= article.upvotes.length %>
 
-                            </button>
+                            </i>
                         </div>
                         <div class="like-unlike">
 
-                            <button width="20.0" height=20.0 class="ml-3 mr-3 mt-4" id="downvote-button"
+                            <i class="fa fa-thumbs-down downvote-button" style="margin:5px 5px"
                                 data-id="<%=article.title %>">
-                                <img src="../../assets/downvote.png" alt="" width="20.0" height="20.0"
-                                    data-id="<%= article.title %>">
+
                                 <%= article.downvotes.length %>
-                            </button>
+                            </i>
                         </div>
                         <div class="like-unlike">
 
-                            <button width="20.0" height=20.0 class="ml-3 mr-3 mt-4" id="comment-button">
-                                <img src="../../assets/comments.jpeg" alt="" width="20.0" height="20.0">
-                                <%= article.comments.length %>
-                            </button>
+
+                            <i class="fa fa-comments comment-button" id="comment-button-<%=article.id %>"
+                                data-id="<%= article.id %>" onclick="showComments(event)"
+                                style="margin: 5px 5px;"><%= article.comments.length %></i>
+
+
 
                         </div>
                     </div>
                     <a href="/articles/<%= article.slug %>" class="btn btn-primary mr-3 ml-3 mt-4">Read
                         More</a>
-
                 </div>
 
             </div>
-            <div class="mt-24 mr-4 ml-4" id="comment-box" style="overflow-y: auto; margin: 20px 0px;">
+            <div class="mt-24 mr-4 ml-4 comment-box" id="comment-box-<%= article.id %>"
+                style="overflow-y: auto; margin: 20px 0px;">
                 <form action="/articles/<%= article.id %>" method="POST">
                     <div class="form-group " style="display:flex;flex-direction: row;">
 
                         <input type="text" name="comment" id="<%=article.id %>" class="form-control mb-10 mt-10"
                             placeholder="Write a comment">
-                        <button type="submit" id="add-comment" class="btn btn-primary"
+                        <button type="submit" class="btn btn-primary add-comment"
                             data-id="<%=article.id %>">Send</button>
                     </div>
                 </form>
-                <div class="card-title">
+                <div class="card-title" style="margin-top: 32px;">
                     <h4>Comments</h4>
                 </div>
 
@@ -142,6 +161,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
+
 </body>
 
 
