editing glitch fixed

--- a/views/articles/index.ejs
+++ b/views/articles/index.ejs
@@ -57,6 +57,7 @@
         </div>
 
         <a href="/articles/new/" class="btn btn-success">New Article</a>
+        <%- include("../authentication/partials/messages.ejs") %>
         <% articles.forEach(article =>{ %>
 
         <div class="card mt-4">
