--- a/public/css/register.css
+++ b/public/css/register.css
@@ -90,6 +90,21 @@ h4,label{
 .btn{
     font-family: 'Roboto Mono', monospace;
     font-style: italic;
+    font-size: 1.0em;
+}
+@media (max-width:800px)
+{
+   .btn{
+    
+    font-size: 0.8em;
+} 
+}
+@media (max-width:580px)
+{
+   .btn{
+    
+    font-size: 0.6em;
+} 
 }
 input,textarea{
 background-color: rgba(255, 235, 205, 0.596);
